Fix missing parameters in swagger
