# build/swagger.json
@@ -457,8 +457,43 @@
                     "Media"
                 ],
                 "description": "",
-                "parameters": [],
-                "responses": {}
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "location": {
+                                    "example": "any"
+                                },
+                                "tags": {
+                                    "example": "any"
+                                },
+                                "media_uri": {
+                                    "example": "any"
+                                },
+                                "entry_ids": {
+                                    "example": "any"
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
             }
         },
         "/media/{id}": {
